<resources>
    <string name="app_name">COMPET</string>

    <string name="facebook_app_id">1385471324805923</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_id">아이디</string>
    <string name="edit_password">비밀번호</string>
    <string name="btn_login">로그인</string>
    <string name="btn_sign_up">가입하기</string>
    <string name="activity_sign_up">회원가입</string>
    <string name="edit_password_check">비밀번호 확인</string>
    <string name="edit_nickname">닉네임</string>
    <string name="text_duplicate_check">중복확인</string>
    <string name="btn_complete_sign_up">회원가입</string>
    <string name="activity_new_write">새 글 등록</string>
    <string name="edit_search_keyword">내용을 입력해주세요</string>
    <string name="btn_complete_post">공유하기</string>
    <string name="update_my_profile">프로필 수정</string>
    <string name="activity_setting">설정</string>
    <string name="text_change_image">사진변경하기</string>
    <string name="btn_change_password">비밀번호 수정</string>
    <string name="btn_logout">로그아웃</string>
    <string name="btn_leave">탈퇴</string>
    <string name="edit_new_password">새로운 비밀번호</string>
    <string name="edit_new_password_check">새로운 비밀번호 확인</string>
    <string name="edit_old_password">현재 비밀번호</string>
    <string name="activity_detail_post">상세페이지</string>
    <string name="activity_update_post">페이지 수정</string>
    <string name="text_sign_up">회원이 아니세요?</string>
    <string name="action_write_complete">공유하기</string>
    <string name="activity_update_my_profile">프로필 편집</string>
    <string name="action_complete">완료</string>
    <string name="dialog_ok">확인</string>
    <string name="dialog_cancel">취소</string>
    <string name="logout_message">로그아웃 하시겠습니까?</string>
    <string name="leave_message">탈퇴 하시겠습니까?</string>
    <string name="dialog_not_saved">정보가 저장 되지 않았습니다. 그대로 끝내시겠습니까?</string>
    <string name="action_update">수정</string>
    <string name="action_delete">삭제</string>
    <string name="Look">보기</string>
    <string name="password_hide">감추기</string>
    <string name="setting_language">언어 설정</string>
    <string name="text_recommend">추천검색어</string>
</resources>
