<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="1000dp"
    android:minHeight="320dp"
    android:orientation="vertical"
    tools:context="com.mu.compet.fragment.ChangePasswordDialogFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/edit_old_password"
        android:textColor="@color/textBlack" />

    <EditText
        android:id="@+id/edit_old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:inputType="textPassword"
        android:theme="@style/TextLabel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/edit_new_password"
        android:textColor="@color/textBlack" />

    <EditText
        android:id="@+id/edit_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:inputType="textPassword"
        android:theme="@style/TextLabel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/edit_new_password_check"
        android:textColor="@color/textBlack" />

    <EditText
        android:id="@+id/edit_new_password_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:inputType="textPassword"
        android:theme="@style/TextLabel" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="32dp"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:layout_marginRight="32dp">

        <TextView
            android:id="@+id/text_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginRight="32dp"
            android:textColor="@color/mainRedColor"
            android:text="@string/dialog_cancel"/>

        <TextView
            android:id="@+id/text_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/dialog_ok"
            android:textColor="@color/mainRedColor"/>
    </LinearLayout>
</LinearLayout>
