<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.mu.compet.activity.SettingActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mainRedColor"
        android:minHeight="?attr/actionBarSize">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/white"
            android:textSize="@dimen/toolbar_text" />
    </android.support.v7.widget.Toolbar>

    <Button
        android:layout_marginTop="4dp"
        android:id="@+id/btn_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="left|center"
        android:paddingLeft="16dp"
        android:text="@string/btn_change_password" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:background="@color/coolGray"/>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="left|center"
        android:paddingLeft="16dp"
        android:text="@string/btn_logout" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="16dp"

        android:background="@color/coolGray"/>

    <Button
        android:id="@+id/btn_leave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="left|center"
        android:paddingLeft="16dp"
        android:text="@string/btn_leave" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="16dp"
        android:background="@color/coolGray"/>

    <!--

    <Button
        android:id="@+id/btn_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="left|center"
        android:paddingLeft="16dp"
        android:text="@string/setting_language" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="4dp"
        android:background="@color/coolGray"/>
        -->


</LinearLayout>
