<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="1000dp"
    android:minHeight="320dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/edit_old_password"
        android:textColor="@color/textBlack" />

    <EditText
        android:id="@+id/edit_old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:inputType="textPassword"
        android:theme="@style/TextLabel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/edit_new_password"
        android:textColor="@color/textBlack" />

    <EditText
        android:id="@+id/edit_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:inputType="textPassword"
        android:theme="@style/TextLabel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/edit_new_password_check"
        android:textColor="@color/textBlack" />

    <EditText
        android:id="@+id/edit_new_password_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:inputType="textPassword"
        android:theme="@style/TextLabel" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="32dp"
        android:background="@color/gray" />

</LinearLayout>
