<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mu.compet.activity.SignUpActivity">

    <android.support.v7.widget.Toolbar
        app:theme="@style/ToolBarStyle"
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mainRedColor"
        android:minHeight="?attr/actionBarSize">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/white"
            android:textSize="@dimen/toolbar_text" />
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_camera"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignBottom="@+id/image_profile"
            android:layout_alignEnd="@+id/image_profile"
            android:layout_alignRight="@+id/image_profile"
            android:onClick="addCameraClicked"
            app:srcCompat="@drawable/ic_camera" />

        <ImageView
            android:id="@+id/image_profile"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="43dp"
            android:onClick="addPictureClicked"
            app:srcCompat="@drawable/image_default_profile" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/string_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="@dimen/login_margin_left"
            android:layout_marginTop="16dp"
            android:text="@string/edit_nickname"
            android:textColor="@color/textBlack" />

        <EditText
            android:id="@+id/edit_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/string_nickname"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/login_margin_left"
            android:layout_marginRight="@dimen/login_margin_left"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:theme="@style/TextLabel" />

        <TextView
            android:id="@+id/text_nickname_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/edit_nickname"
            android:layout_alignBottom="@+id/edit_nickname"
            android:layout_alignEnd="@+id/edit_nickname"
            android:layout_alignRight="@+id/edit_nickname"
            android:onClick="duplicateNickNameCheckClicked"
            android:text="@string/text_duplicate_check" />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_complete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_margin_left"
        android:layout_marginRight="@dimen/login_margin_left"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:enabled="false"
        android:background="@drawable/btn_login_selector"
        android:text="@string/btn_complete_sign_up"
        android:textColor="@android:color/white" />


</LinearLayout>
